structure the app correctly and placed every single routes. for now

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 body {
   margin: 0;
+  margin-bottom: 8rem; /* for sticky footer */
   padding: 0;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
