--- a/src/index.css
+++ b/src/index.css
@@ -1,31 +1,35 @@
 html {
-  position: relative;
-  min-height: 100%;
+	position: relative;
+	min-height: 100%;
 }
 
 body {
-  margin: 0;
-  margin-bottom: 8rem; /* for sticky footer */
-  padding: 0;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  color: #333;
+	margin: 0;
+	margin-bottom: 8rem !important; /* for sticky footer */
+	padding: 0;
+	font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	color: #333;
 }
 
 body {
-  overflow-x: hidden;
+	overflow-x: hidden;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-  monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+@media (max-width: 500px) {
+	body {
+		margin-bottom: 10rem !important;
+	}
 }
 
 @media (max-width: 420px) {
-  html {
-    font-size: 86%;
-  }
+	html {
+		font-size: 86%;
+	}
 }
